// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Submit form is invalid 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-zckkkk {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  border-color: #b3144d;
}

.cache-zckkkk::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-zckkkk::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-zckkkk:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-zckkkk::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-zckkkk:hover,
.cache-zckkkk:focus {
  border-color: #792dd4;
}

.cache-zckkkk:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
  border-color: #792dd4;
}

.cache-zckkkk::-webkit-input-placeholder {
  opacity: 1;
}

.cache-zckkkk::-moz-placeholder {
  opacity: 1;
}

.cache-zckkkk:-ms-input-placeholder {
  opacity: 1;
}

.cache-zckkkk::placeholder {
  opacity: 1;
}

.cache-zckkkk:hover,
.cache-zckkkk:focus {
  border-color: #92103f;
}

.cache-zckkkk:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
  border-color: #92103f;
}

.cache-2yjbay {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: visible;
  height: auto;
  max-height: initial;
}

.cache-xbtm7g {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-ivpz1s {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.cache-ivpz1s:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-bjn8wh el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-zckkkk el3h3g92"
          name="toto"
          type="text"
          value="4"
        />
      </div>
      <div
        class="cache-2yjbay e5hc7t70"
      >
        <div
          class="cache-xbtm7g el3h3g94"
        >
          This field should match the regex ^[a-zA-Z]*$
        </div>
      </div>
    </div>
    <button
      class="cache-ivpz1s e112qvla2"
      disabled=""
      type="submit"
    >
      Test
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit form is submitting 1`] = `
<DocumentFragment>
  .cache-ivpz1s {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
  background: #e5dbfd;
  color: #ffffff;
}

.cache-ivpz1s:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ljs09t {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.cache-11f05l0-Loader {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<form
    novalidate=""
  >
    <button
      class="cache-ivpz1s e112qvla2"
      disabled=""
      type="submit"
    >
      <svg
        aria-label="Loading"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        aria-valuetext="20%"
        class="cache-ljs09t e1y1n78x1"
        role="progressbar"
        style="height: 1em; width: 1em;"
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="transparent"
          stroke-width="16"
        />
        <circle
          class="cache-11f05l0-Loader"
          cx="50"
          cy="50"
          fill="none"
          r="42"
          stroke="currentColor"
          stroke-dasharray="263.89378290154264"
          stroke-dashoffset="211.11502632123413"
          stroke-linecap="round"
          stroke-width="16"
        />
      </svg>
      Test
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit renders correctly  1`] = `
<DocumentFragment>
  .cache-1unu7k4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.cache-1unu7k4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1unu7k4:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1unu7k4:hover,
.cache-1unu7k4:active {
  background: #792dd4;
  color: #f9f9fa;
}

<form
    novalidate=""
  >
    <button
      class="cache-1unu7k4 e112qvla2"
      type="submit"
    >
      Test
    </button>
  </form>
</DocumentFragment>
`;

exports[`Submit renders correctly with icon and iconPosition  1`] = `
<DocumentFragment>
  .cache-813nkh {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.cache-813nkh:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-813nkh:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-813nkh:hover,
.cache-813nkh:active {
  background: #792dd4;
  color: #f9f9fa;
}

.cache-1ah7xw8-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<form
    novalidate=""
  >
    <button
      class="cache-813nkh e112qvla2"
      type="submit"
    >
      <svg
        class="cache-1ah7xw8-sizeStyles e1gt4cfo0"
        viewBox="0 0 24 24"
      >
        <path
          d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
        />
      </svg>
      Test
    </button>
  </form>
</DocumentFragment>
`;
